--- a/buscacep/src/App.css
+++ b/buscacep/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-
 }
 
 .App-logo {
@@ -11,16 +10,22 @@
 
 .App-input{
   height: 20px;
-  width: 150px;
+  width: 200px;
   margin: 20px auto;
   text-align: center;
+  color: black;
+  font-weight: bold;
+ 
 }
 
 .App-button{
-  color: #282c34;
+  color: rgb(8, 0, 0);
   height: 30px;
-  width: 150px;
-  font-weight: 100;
+  width: 200px;
+  font-weight: bold;
+  background-color: orangered;
+  border-radius: 4px;
+  border:none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -30,7 +35,7 @@
 }
 
 span{
-  color: red;
+  color: whitesmoke;
   margin: 1px;
 }
 
@@ -57,5 +62,6 @@ span{
     transform: rotate(360deg);
   }
 }
+
 
 
